tests/aster/x/ocaml/map_assign.ml
(* Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:38 +0700 *)

let () =
  let scores = ref [("alice", 1)] in
  scores := (("bob", 2) :: List.remove_assoc "bob" !scores);
  print_endline (String.concat " " (List.filter (fun s -> s <> "") [string_of_int (List.assoc "bob" !scores))]));
